[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Fonts/Dynamic_Fonts_Data/legend_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://language_selection_menu.gd" type="Script" id=3]
[ext_resource path="res://LanguageButtons/LanguageButtonFrenchFrance.tscn" type="PackedScene" id=4]
[ext_resource path="res://LanguageButtons/LanguageButtonGermanGermany.tscn" type="PackedScene" id=5]
[ext_resource path="res://LanguageButtons/LanguageButtonEnglishUSA.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="LanguageSelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
language_buttons_container_node_path = NodePath("ColorRect/ScrollContainer/LanguageButtonsContainer")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 40.0
margin_right = 96.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -664.0
margin_top = -307.0
margin_right = 664.0
margin_bottom = 307.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButtonsContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
margin_right = 1328.0
margin_bottom = 614.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 70
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButtonEnglishUSA" parent="ColorRect/ScrollContainer/LanguageButtonsContainer" instance=ExtResource( 6 )]
margin_top = 166.0
margin_bottom = 213.0

[node name="LanguageButtonFrenchFrance" parent="ColorRect/ScrollContainer/LanguageButtonsContainer" instance=ExtResource( 4 )]

[node name="LanguageButtonGermanGermany" parent="ColorRect/ScrollContainer/LanguageButtonsContainer" instance=ExtResource( 5 )]
margin_top = 400.0
margin_bottom = 447.0

[node name="WarningLabel" type="Label" parent="ColorRect"]
margin_left = 639.804
margin_top = 922.665
margin_right = 1402.8
margin_bottom = 963.665
text = "Some language translations may be innaccurate."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="ColorRect"]
margin_left = 1434.51
margin_top = 844.092
margin_right = 1749.51
margin_bottom = 891.092
text = "apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -445.319
margin_top = -100.0
margin_right = 605.681
margin_bottom = -50.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_LanguageSelectionMenu_visibility_changed"]
[connection signal="pressed" from="ColorRect/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="ColorRect/BackButton" to="." method="_on_BackButton_pressed"]
